--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,13 @@ services:
   postgresql:
     image: postgres:latest
     restart: unless-stopped
-    ports:
-      - 5432:5432
+    container_name: postgres
     environment:
       POSTGRES_DB: FYBR
       POSTGRES_USER: FYBR
       POSTGRES_PASSWORD: FYBR
+    ports:
+      - 5432:5432
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
