--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
+astroid @ file:///C:/ci/astroid_1625075954821/work
+atomicwrites==1.4.0
+attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
 backcall==0.2.0
 branca==0.4.2
 brotlipy==0.7.0
-certifi==2020.12.5
+certifi==2021.5.30
 cffi @ file:///C:/ci/cffi_1613247279197/work
 chardet @ file:///C:/ci/chardet_1607690654534/work
 click @ file:///home/linux1/recipes/ci/click_1610990599742/work
 click-plugins==1.1.1
 cligj==0.7.1
-colorama==0.4.4
+colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
 cryptography @ file:///C:/ci/cryptography_1616769344312/work
 cycler==0.10.0
 decorator==5.0.7
@@ -16,38 +19,50 @@ Flask-SQLAlchemy==2.5.1
 folium==0.12.1
 gpxpy==1.4.2
 greenlet==1.1.0
+haversine==2.3.1
 idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
+iniconfig @ file:///home/linux1/recipes/ci/iniconfig_1610983019677/work
 ipykernel==5.5.3
 ipython==7.22.0
 ipython-genutils==0.2.0
+isort @ file:///tmp/build/80754af9/isort_1624300337312/work
 itsdangerous==1.1.0
 jedi==0.18.0
 Jinja2==2.11.3
 jupyter-client==6.1.12
 jupyter-core==4.7.1
 kiwisolver @ file:///C:/ci/kiwisolver_1612282606037/work
+lazy-object-proxy @ file:///C:/ci/lazy-object-proxy_1616529307648/work
 MarkupSafe==1.1.1
 matplotlib==3.4.1
+mccabe==0.6.1
 mkl-fft==1.3.0
 mkl-random @ file:///C:/ci/mkl_random_1618854156666/work
 mkl-service==2.3.0
+more-itertools @ file:///tmp/build/80754af9/more-itertools_1622818384463/work
 munch==2.5.0
 numpy @ file:///C:/ci/numpy_and_numpy_base_1618497418457/work
 olefile==0.46
 overpy==0.6
+packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
 pandas @ file:///C:/ci/pandas_1618365634936/work
 parso==0.8.2
 pickleshare==0.7.5
 Pillow @ file:///C:/ci/pillow_1617386341487/work
 plotly @ file:///tmp/build/80754af9/plotly_1610565580232/work
+pluggy @ file:///C:/ci/pluggy_1615976358795/work
 prompt-toolkit==3.0.18
 psycopg2==2.8.6
+py @ file:///tmp/build/80754af9/py_1607971587848/work
 pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
 Pygments==2.8.1
+pylint @ file:///C:/ci/pylint_1625158933538/work
 pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
 pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
 PySocks @ file:///C:/ci/pysocks_1605287845585/work
+pytest==6.2.4
 python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
+python-decouple==3.4
 pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
 pywin32==300
 pyzmq==22.0.3
@@ -56,6 +71,7 @@ retrying==1.3.3
 Shapely==1.7.1
 six @ file:///C:/ci/six_1605187374963/work
 SQLAlchemy==1.4.15
+toml @ file:///tmp/build/80754af9/toml_1616166611790/work
 tornado==6.1
 traitlets==5.0.5
 urllib3 @ file:///tmp/build/80754af9/urllib3_1615837158687/work
@@ -63,3 +79,4 @@ wcwidth==0.2.5
 Werkzeug==1.0.1
 win-inet-pton @ file:///C:/ci/win_inet_pton_1605306167264/work
 wincertstore==0.2
+wrapt==1.12.1
